# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.

  06 May 2005; Brian Harring <ferringb@gentoo.org> pym/config.py: Dsd supplied 
  a tweak to the quote escaping; should solve the issues transferring from 
  python side to bash.

  05 May 2005; Jason Stubbs <jstubbs@gentoo.org> bin/test_target_graph.py
  pym/portage_dep.py: Added some basic utility methods to StateGraph. Reworked
  the test script into a functional equivalent of --pretend depclean.

  05 May 2005; Jason Stubbs <jstubbs@gentoo.org> pym/portage_syntax.py: Added
  with_key() method to Atom for creating a new atom of a different key with
  the same constraints.

  05 May 2005; Jason Stubbs <jstubbs@gentoo.org> bin/test_target_graph.py
  pym/portage_dep.py: Added transform_virtuals() function to just that. Added
  testing code to show how it is used. Renamed TargetGraph to StateGraph.

  05 May 2005; Jason Stubbs <jstubbs@gentoo.org> bin/test_target_graph.py
  pym/portage_dep.py: Added full support for OR-based dependencies. Still
  need to sort out virtuals and provide a public interface for TargetGraph.

  04 May 2005; Mike Frysinger <vapier@gentoo.org> pym/ebuild.py:
  Do not check the digests of files except when unpacking/fetching #29333.

  04 May 2005; Mike Frysinger <vapier@gentoo.org> bin/prepall:
  Remove old unused aclocal code #81419.  Don't chmod +x files that are already 
  +x #81427.  Make sure all shared/static library pairs have proper linker 
  scripts in /usr/lib when appropriate #81420.

  04 May 2005; Mike Frysinger <vapier@gentoo.org> 
  bin/ebuild-default-functions.sh:
  Allow people to pass files in $PWD to unpack via ./FILE syntax #24637.
